fix: remove hardcoded data, add real DB screens, fix crashes, add payment flow